Fix #93 - Edit / delete button appearance on mobiles

--- a/src/styles/features/_post.scss
+++ b/src/styles/features/_post.scss
@@ -428,13 +428,14 @@
       position: absolute;
       top: 30px;
       right: 30px;
-      overflow: visible;
 
       @media only screen and (max-width: 460px) {
         right: 14px;
-        top: 12px;
+        top: 18px;
         border: 0;
         font-size: 1.8rem;
+        height: auto;
+        line-height: 1;
 
         span {
           display: none;
